--- a/ALBA_GOMEZ_IVAN/p1/e1.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e1.tex
@@ -1,9 +1,8 @@
-Escriba aquí su respuesta al ejercicio 1. 
+La función dedicada a establecer un determinado valor a cada una de las celdas del terreno de batalla la hemos llamado cellValue().
 
-% Elimine los símbolos de tanto por ciento para descomentar las siguientes instrucciones e incluir una imagen en su respuesta. La mejor ubicación de la imagen será determinada por el compilador de Latex. No tiene por qué situarse a continuación en el fichero en formato pdf resultante.
-%\begin{figure}
-%\centering
-%\includegraphics[width=0.7\linewidth]{./defenseValueCellsHead} % no es necesario especificar la extensión del archivo que contiene la imagen
-%\caption{Estrategia devoradora para la mina}
-%\label{fig:defenseValueCellsHead}
-%\end{figure}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{./defenseValueCellsHead}
+\caption{Estrategia devoradora para la mina}
+\label{fig:defenseValueCellsHead}
+\end{figure}
