Ejercicios resueltos y practica completada

--- a/ALBA_GOMEZ_IVAN/autor.tex
+++ b/ALBA_GOMEZ_IVAN/autor.tex
@@ -1,4 +1,4 @@
-Ivan Alba Gomez \\ % mantenga las dos barras al final de la línea y este comentario
+Iván Alba Gómez \\ % mantenga las dos barras al final de la línea y este comentario
 ivan.albagomez@alum.uca.es \\ % mantenga las dos barras al final de la línea y este comentario
-Teléfono: xxxxxxxx \\ % mantenga las dos barras al final de la linea y este comentario
+Teléfono: XXXXXXXXX \\ % mantenga las dos barras al final de la linea y este comentario
 NIF: 49302616T \\ % mantenga las dos barras al final de la línea y este comentario
