--- a/ALBA_GOMEZ_IVAN/p1/e1.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e1.tex
@@ -1,5 +1,9 @@
-La función dedicada a establecer un determinado valor a cada una de las celdas del terreno de batalla la hemos llamado cellValue().
-
+La función dedicada a establecer un determinado valor a cada una de las celdas del terreno de batalla para el caso del centro de extracción de minerales la hemos llamado cellValue().
+\begin{itemize}
+\item Calculamos el tamaño de las celdas.
+\item Calculamos el centro del mapa.
+\item Devolvemos la distancia entre el centro del mapa y el centro de la celda que estamos evaluando.
+\end{itemize}
 \begin{figure}
 \centering
 \includegraphics[width=0.7\linewidth]{./defenseValueCellsHead}
