--- a/ALBA_GOMEZ_IVAN/p1/e2.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e2.tex
@@ -1,1 +1,7 @@
-Escriba aquí su respuesta al ejercicio 2.
+\begin{itemize}
+\item Calculamos el centro de la celda a tratar.
+\item Comprobamos que la defensa no se sale de los límites del mapa.
+\item Comprobamos que la defensa no colisiona con el resto de defensas ya colocadas.
+\item Comprobamos que la defensa no colisiona con ningún obstáctulo.
+\item Devolvemos la distancia entre el centro del mapa y el centro de la celda que estamos evaluando.
+\end{itemize}
