--- a/ALBA_GOMEZ_IVAN/p1/e3.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e3.tex
@@ -1,13 +1,56 @@
 \begin{lstlisting}
-// sustituya este codigo por su respuesta
-void placeDefenses(...) {
+class Cell {    // Usado en placeDefenses()
+    public:
+        Cell(int row, int col, float value) : row_(row), col_(col), value_(value) {}
+        int row() { return row_; }
+        int col() { return col_; }
+        float value() { return value_; }
+    private:
+        int row_, col_;
+        float value_;
+};
 
-    List<Defense*>::iterator currentDefense = defenses.begin();
-    while(currentDefense != defenses.end() && maxAttemps > 0) {
+Cell selection(std::list<Cell> cellList) {  // Susado en placeDefenses()
+    return cellList.front();
+}
 
-        (*currentDefense)->position.x = ((int)(_RAND2(nCellsWidth))) * cellWidth + cellWidth * 0.5f;
-        ...
-        ++currentDefense;
+void DEF_LIB_EXPORTED placeDefenses(bool** freeCells, int nCellsWidth, int nCellsHeight, float mapWidth, float mapHeight
+              , std::list<Object*> obstacles, std::list<Defense*> defenses) {
+    float cellWidth = mapWidth / nCellsWidth;
+    float cellHeight = mapHeight / nCellsHeight; 
+    float values[nCellsHeight][nCellsWidth];    // Matriz que almacena los valores de cada celda
+    List<Cell> cellList;
+    // Rellenamos la matriz de valores para colocar la primera defensa (Centro de extracción de minerales)
+    for(int i = 0; i < nCellsHeight; i++) {
+        for(int j = 0; j < nCellsWidth; j++) {
+            values[i][j] = cellValue(i, j, freeCells, nCellsWidth, nCellsHeight, mapWidth, mapHeight, obstacles, defenses);
+        }
+    }
+    // Agrupamos las celdas en una lista
+    List<Cell>::iterator itCells = cellList.begin();
+    for(int i = 0; i < nCellsHeight; i++) {
+        for(int j = 0; j < nCellsWidth; j++) {
+            Cell c(i, j, values[i][j]);
+            cellList.insert(itCells, c);
+            itCells++;
+        }
+    }
+    // Ordenamos la lista de menor a mayor valor
+    cellList.sort([](Cell& c1, Cell& c2) { return c1.value() < c2.value(); });
+    // Colocamos la primera defensa
+    List<Defense*>::iterator itDefense = defenses.begin();
+    bool placed = false;
+    while(!placed) { // Mientras no esté colocada la primera defensa...
+        // Seleccionamos la celda más prometedora, que es el primer elemento de cellList
+        Cell promisingCell = selection(cellList);  // promisingCell guarda la celda más prometedora
+        // Si es factible...
+        if(factibility(*itDefense, promisingCell.row(), promisingCell.col(), obstacles, defenses, cellWidth, cellHeight, mapWidth, mapHeight)) {
+            // Asignamos a la posición de la defensa la posición del centro de la celda más prometedora
+            (*itDefense)->position = cellCenterToPosition(promisingCell.row(), promisingCell.col(), cellWidth, cellHeight);
+            placed = true;
+        }
+        // Sacamos de la lista la celda procesada
+        cellList.pop_front();
     }
 }
 \end{lstlisting}
