--- a/ALBA_GOMEZ_IVAN/p1/e4.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e4.tex
@@ -1,1 +1,6 @@
-Escriba aquí su respuesta al ejercicio 4.
+\begin{itemize}
+\item Conjunto de candidatos: Cada una de las celdas del mapa.
+\item Conjunto de candidatos seleccionados: Cada celda donde colocamos las defensas.
+\item Función selección: Selecciona la celda más prometedora, en nuestro caso devuelve la primera posición de la lista cellList ya ordenada anteriormente. (\textit{'selection()'})
+\item Función de factibilidad: Comprueba si es posible colocar la defensa en la celda dada. (\textit{'factibility()'})
+\end{itemize}
