--- a/ALBA_GOMEZ_IVAN/p1/e5.tex
+++ b/ALBA_GOMEZ_IVAN/p1/e5.tex
@@ -1,1 +1,6 @@
-Escriba aquí su respuesta al ejercicio 5.
+La función dedicada a establecer un determinado valor a cada una de las celdas del terreno de batalla para el caso del resto de defensas la hemos llamado cellValueRest().
+\begin{itemize}
+\item Calculamos el tamaño de las celdas.
+\item Obtenemos la posición del centro de extracción de minerales.
+\iten Devolvemos la distancia entre el centro de extracción de minerales y el centro de la celda que estamos evaluando.
+\end{itemize}
