--- a/ALBA_GOMEZ_IVAN/p2/e1.tex
+++ b/ALBA_GOMEZ_IVAN/p2/e1.tex
@@ -1,3 +1,17 @@
 $$ f(radio,rango,salud)=(radio+rango)-1+rango^2+3\frac{radio}{salud} $$
 
-Escriba aquí su respuesta al ejercicio 1.
+La función que determina un valor para cada tipo de defensa la he llamado defenseValue.
+Dicha función recibe una defensa y devuelve un valor siguiendo mi criterio.
+El criterio utilizado es el siguiente:
+
+Mi criterio de importancia (0-100\%):
+
+range -------------------- 5\%
+
+dispersion --------------- 15\%
+
+damage ------------------- 30\%
+
+attacksPerSecond  -------- 20\%
+
+health ------------------- 30\%
