--- a/ALBA_GOMEZ_IVAN/p2/e3.tex
+++ b/ALBA_GOMEZ_IVAN/p2/e3.tex
@@ -1,15 +1,18 @@
 \begin{lstlisting}
-// sustituya este codigo por su respuesta
-void selectDefenses(...) {
-
-    unsigned int cost = 0;
-    std::list<Defense*>::iterator it = defenses.begin();
-    while(it != defenses.end()) {
-        if(cost + (*it)->cost <= ases) {
-            selectedIDs.push_back((*it)->id);
-            cost += (*it)->cost;
+void mochila(float** tsp, unsigned int ases, std::list<Aux> myDefenses) {
+    std::list<Aux>::iterator it = myDefenses.begin();
+    for(int j = 0; j <= ases && it != myDefenses.end(); j++) {
+        if(j < it->getCost()) tsp[0][j] = 0;
+        else tsp[0][j] = it->getValue();
+        it++;
+    }
+    it = myDefenses.begin(); it++;
+    for(int i = 1; i <= myDefenses.size() && it != myDefenses.end(); i++) {
+        for(int j = 0; j <= ases; j++) {
+            if(j < it->getCost()) tsp[i][j] = tsp[i-1][j];
+            else tsp[i][j] = std::max(tsp[i-1][j], tsp[i-1][j-it->getCost()] + it->getValue());
         }
-        ++it;
+        it++;
     }
 }
 \end{lstlisting}
