--- a/ALBA_GOMEZ_IVAN/p3/e5.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e5.tex
@@ -1,1 +1,8 @@
-Escriba aquí su respuesta al ejercicio 5.
+Complejidad de las diferentes versiones del algoritmo de colocación de defensas:
+
+\begin{itemize}
+\item Sin preordenación: \textit{O(n²)}
+\item Con preordenación por fusión: \textit{O(nlog(n))}
+\item Con preordenación rápida: \textit{O(nlog(n))}
+\item Con preordenación por montículos: \textit{O(nlog(n))}
+\end{itemize}
