--- a/ALBA_GOMEZ_IVAN/p3/e2.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e2.tex
@@ -1,3 +1,5 @@
+\begin{lstlisting}
+
 void insertionSort(std::vector<Cell>& cellVector, int i, int j) {
     Cell cell;
     for (int l = i + 1; l <= j; l++) {
@@ -40,3 +42,5 @@ void fusionSort(std::vector<Cell>& cellVector, int i, int j) {
         fusion(cellVector, i, k, j);
     }
 }
+
+\end{lstlisting}
