--- a/ALBA_GOMEZ_IVAN/p3/e3.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e3.tex
@@ -1,3 +1,5 @@
+\begin{lstlisting}
+
 void insertionSort(std::vector<Cell>& cellVector, int i, int j) {
     Cell cell;
     for (int l = i + 1; l <= j; l++) {
@@ -38,3 +40,5 @@ void fastSort(std::vector<Cell>& cellVector, int i, int j) {
         fastSort(cellVector, p + 1, j);
     }
 }
+
+\end{lstlisting}
