--- a/ALBA_GOMEZ_IVAN/p3/e4.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e4.tex
@@ -1,1 +1,37 @@
-Escriba aquí su respuesta al ejercicio 4.
+Para las pruebas de caja negra se ha usado un vector de enteros, en vez de un vector de Cell, con el objetivo de simplificar las pruebas.
+
+\begin{lstlisting}
+
+int main() {
+
+    int N = 5;
+
+    std::vector<int> v1;
+    std::vector<int> v2;
+    std::vector<int> v3;
+
+    for(int i = 0; i < N; i++) {
+        for(int j = 0; j < N; j++) {
+            v1.push_back(rand() % 100);     // rand de 0 a 99
+            v2.push_back(rand() % 100);     // rand de 0 a 99
+            v3.push_back(rand() % 100);     // rand de 0 a 99
+        }
+    }
+
+    std::cout << "VECTOR V1" << std::endl;
+    imprimir(v1);
+    fusionSort(v1, 0, v1.size() - 1);
+    imprimir(v1);
+
+    std::cout << "VECTOR V2" << std::endl;
+    imprimir(v2);
+    fastSort(v2, 0, v2.size() - 1);
+    imprimir(v2);
+
+    std::cout << "VECTOR V3" << std::endl;
+    imprimir(v3);
+    heapSort(v3, v3.size());
+    imprimir(v3);
+}
+
+\end{lstlisting}
