--- a/ALBA_GOMEZ_IVAN/p3/e6.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e6.tex
@@ -1,5 +1,7 @@
 Código para la toma de tiempos:
 
+\begin{lstlisting}
+
 float E_ABS = 0.01;
 float E_REL = 0.001;
 cronometro c;
@@ -15,8 +17,13 @@ cronometro c;
     } while(c.tiempo() < E_ABS/E_REL+E_ABS);
     c.parar();
 
+\end{lstlisting}
+
 Para la realización de la gráfica, primero ejecutamos la orden \textit{make data} para obtener los datos necesarios para la realización de la misma.
 Luego ejecutamos la orden \textit{make plot} para que se genere la gráfica. (En mi caso no he hecho uso de esta instrucción, puesto que la he generado manualmente con los datos incluidos en 3 archivos diferentes. La orden que he usado ha sido \textit{plot "tiemposFusion.txt" w l lw 3, "tiemposRapida.txt" w l lw 3, "tiemposMonticulo.txt" w l lw 3})
+
+
+\begin{lstlisting}
 
 tiemposFusion.txt
 16	1.05307e-05
@@ -56,6 +63,8 @@ tiemposMonticulo.txt
 7056	46.4571
 8836	91.6098
 10816	164.344
+
+\end{lstlisting}
 
 \begin{figure}
 \centering
