--- a/ALBA_GOMEZ_IVAN/p3/e6.tex
+++ b/ALBA_GOMEZ_IVAN/p3/e6.tex
@@ -20,49 +20,49 @@ cronometro c;
 \end{lstlisting}
 
 Para la realización de la gráfica, primero ejecutamos la orden \textit{make data} para obtener los datos necesarios para la realización de la misma.
-Luego ejecutamos la orden \textit{make plot} para que se genere la gráfica. (En mi caso no he hecho uso de esta instrucción, puesto que la he generado manualmente con los datos incluidos en 3 archivos diferentes. La orden que he usado ha sido \textit{plot "tiemposFusion.txt" w l lw 3, "tiemposRapida.txt" w l lw 3, "tiemposMonticulo.txt" w l lw 3})
+Luego ejecutamos la orden \textit{make plot} para que se genere la gráfica. (En mi caso no he hecho uso de esta instrucción, puesto que la he generado manualmente con los datos incluidos en 3 archivos diferentes. La orden que he usado ha sido \textit{plot "tiemposFusion.txt" w l, "tiemposRapida.txt" w l, "tiemposMonticulo.txt" w l})
 
 
 \begin{lstlisting}
 
 tiemposFusion.txt
-16	1.05307e-05
-196	0.00395125
-576	0.0447747
-1156	0.305594
-1936	1.22214
-2916	3.68824
-2916	5.24683
-5476	22.8259
-7056	46.9533
-8836	89.7806
-10816	161.777
+16	1.01452e-05
+196	0.000481283
+576	0.0023466
+1156	0.00862705
+1936	0.0210874
+2916	0.046946
+2916	0.0582231
+5476	0.158967
+7056	0.256737
+8836	0.401194
+10816	0.59608
 
 tiemposRapida.txt
-16	1.09583e-05
-196	0.00380638
-576	0.0467553
-1156	0.324432
-1936	1.24391
-2916	4.18335
-2916	5.27534
-5476	22.6422
-7056	47.0254
-8836	90.4031
-10816	161.983
+16	1.05001e-05
+196	0.000475255
+576	0.00232522
+1156	0.00924325
+1936	0.0210499
+2916	0.0477055
+2916	0.0592517
+5476	0.162935
+7056	0.262465
+8836	0.406422
+10816	0.602452
 
 tiemposMonticulo.txt
-16	8.02297e-06
-196	0.0036961
-576	0.0455317
-1156	0.317036
-1936	1.28819
-2916	4.32741
-2916	5.47745
-5476	23.4846
-7056	46.4571
-8836	91.6098
-10816	164.344
+16	7.32998e-06
+196	0.000460873
+576	0.00234099
+1156	0.00930774
+1936	0.0218267
+2916	0.0515109
+2916	0.0618922
+5476	0.16398
+7056	0.258604
+8836	0.412018
+10816	0.596913
 
 \end{lstlisting}
 
